# mina

./: .#.envrc  README-dev.md  flake.nix
.github/workflows/: codeql-analysis.yml
automation/services/echo/: package.json
automation/services/graphql-public-proxy/: package.json
automation/services/watchdog/check_libp2p/: go.mod  go.sum
buildkite/src/Command/: DockerImage.dhall
frontend/ci-build-me/: package-lock.json
frontend/mina-signer/: package-lock.json
helm/archive-node/templates/: archive.yaml
helm/block-producer/templates/: block-producer.yaml
helm/plain-node/templates/: plain-node.yaml
helm/seed-node/templates/: seed-node.yaml
helm/snark-worker/templates/: snark-coordinator.yaml
nix/: ocaml.nix  overlay.nix
src/app/delegation_backend/src/: go.mod  go.sum
src/app/libp2p_helper/src/: go.mod  go.sum
src/app/snapp_test_transaction/: snapp_test_transaction.ml
src/app/test_executive/: dune
src/lib/block_time/: block_time.ml  block_time.mli
src/lib/crypto/kimchi_backend/common/: gen_version.sh
src/lib/crypto/kimchi_bindings/stubs/: build.sh  dune  gen.sh
src/lib/mina_version/normal/: gen.sh
src/lib/transaction_snark/: transaction_snark.ml  transaction_snark.mli
